# Brats

./: .gitignore  docker-compose.dev.yaml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2274aa092059_change_name_to_nullable.py  544f09293a9a_create_users_table.py
app/: main.py
app/core/: config.py  security.py
app/db/: base_class.py  session.py
app/models/: user.py
app/routers/: users.py
app/schemas/: user.py
